--- a/src/Views/MenuVendas.fxml
+++ b/src/Views/MenuVendas.fxml
@@ -5,36 +5,35 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MenuVendasController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgb(229, 234, 250, 1);">
          <children>
-            <MenuBar layoutX="440.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+            <MenuBar layoutX="430.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                <menus>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Carrinho" />
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Usuario" />
+                  <Menu style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Carrinho" />
+                  <Menu mnemonicParsing="false" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Usuario" />
                </menus>
             </MenuBar>
             <MenuBar prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                <menus>
-                  <Menu mnemonicParsing="false" style="-fx-color: rgba(11, 63, 194, 1);" text="Home" />
+                  <Menu mnemonicParsing="false" style="-fx-font-weight: bold; -fx-text-fill: rgba(11, 63, 194, 1);" text="Home" />
                </menus>
             </MenuBar>
-            <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="MENU DE VENDAS" textFill="#0b3fc2" AnchorPane.leftAnchor="75.0">
+            <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="MENU DE VENDAS" AnchorPane.leftAnchor="75.0">
                <opaqueInsets>
                   <Insets bottom="10.0" />
                </opaqueInsets>
             </Label>
-            <AnchorPane cacheShape="false" focusTraversable="true" layoutX="14.0" layoutY="46.0" minHeight="189.0" minWidth="200.0" prefHeight="216.0" prefWidth="212.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20;">
+            <AnchorPane cacheShape="false" focusTraversable="true" layoutX="6.0" layoutY="46.0" minHeight="189.0" minWidth="200.0" prefHeight="216.0" prefWidth="206.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20;">
                <children>
                   <Label layoutX="13.0" layoutY="9.0" style="-fx-font-weight: bold;" text="Buscar Produto" />
                   <Label layoutX="15.0" layoutY="30.0" text="ID:">
@@ -55,100 +54,28 @@
                      </font>
                   </Label>
                   <TextField layoutX="13.0" layoutY="132.0" prefHeight="13.0" prefWidth="80.0" style="-fx-background-radius: 10;" />
-                  <Button layoutX="56.0" layoutY="172.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="115.0" style="-fx-background-radius: 20; -fx-background-color: rgba(30, 84, 225, 1);" text="Adicionar Produto" textFill="WHITE">
+                  <Button layoutX="46.0" layoutY="172.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="115.0" style="-fx-background-radius: 20; -fx-background-color: rgba(30, 84, 225, 1);" text="Adicionar Produto" textFill="WHITE">
                      <font>
                         <Font size="11.0" />
                      </font>
                   </Button>
-                  <TextField layoutX="117.0" layoutY="132.0" prefHeight="13.0" prefWidth="80.0" style="-fx-background-radius: 10;" />
-                  <Label layoutX="117.0" layoutY="117.0" text="Qntd:">
+                  <TextField layoutX="112.0" layoutY="132.0" prefHeight="13.0" prefWidth="80.0" style="-fx-background-radius: 10;" />
+                  <Label layoutX="111.0" layoutY="117.0" text="Qntd:">
                      <font>
                         <Font size="11.0" />
                      </font>
                   </Label>
-                  <Button layoutX="117.0" layoutY="46.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="80.0" style="-fx-background-radius: 20; -fx-background-color: rgba(30, 84, 225, 1);" text="Pesquisar" textFill="WHITE">
+                  <Button layoutX="112.0" layoutY="46.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="80.0" style="-fx-background-radius: 20; -fx-background-color: rgba(30, 84, 225, 1);" text="Pesquisar" textFill="WHITE">
                      <font>
                         <Font size="11.0" />
                      </font>
                   </Button>
                </children>
             </AnchorPane>
-            <AnchorPane focusTraversable="true" layoutX="234.0" layoutY="46.0" prefHeight="345.0" prefWidth="359.0" style="-fx-background-color: rgba(255,255,255,1); -fx-background-radius: 10; -fx-border-width: 0.5; -fx-border-style: solid; -fx-border-radius: 10;">
+            <AnchorPane focusTraversable="true" layoutX="218.0" layoutY="46.0" prefHeight="345.0" prefWidth="378.0" style="-fx-background-color: rgba(255,255,255,1); -fx-background-radius: 10; -fx-border-width: 0.5; -fx-border-style: solid; -fx-border-radius: 10;">
                <children>
-                  <AnchorPane focusTraversable="true" layoutX="9.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="328.0" prefWidth="342.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-border-width: 0.5; -fx-border-style: solid; -fx-border-width: 0.5;">
+                  <AnchorPane focusTraversable="true" layoutX="9.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="328.0" prefWidth="359.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-border-width: 0.5; -fx-border-style: solid; -fx-border-width: 0.5;">
                      <children>
-                        <GridPane alignment="TOP_CENTER" gridLinesVisible="true" prefHeight="60.0" prefWidth="342.0" style="-fx-background-color: rgba(255,255,255,1); -fx-border-style: solid; -fx-border-width: 0.5; -fx-grid-lines-visible: true; -fx-grid-lines-width: 0.5;">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.0" minWidth="10.0" prefWidth="68.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="0.0" prefWidth="62.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="42.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="57.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="73.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="21.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="70.0" style="-fx-font-weight: bold;" text="ID">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="76.0" style="-fx-font-weight: bold;" text="Produto" GridPane.columnIndex="1">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="70.0" style="-fx-font-weight: bold;" text="Qtd" GridPane.columnIndex="2">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="96.0" style="-fx-font-weight: bold;" text="Preço" GridPane.columnIndex="3">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="77.0" style="-fx-font-weight: bold;" text="Subtotal" GridPane.columnIndex="4">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="79.0" text="011111111" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="79.0" text="Caneca " GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="79.0" text="20" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="79.0" text="R$ 40,00" GridPane.columnIndex="3" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="79.0" text="R$ 800,00" GridPane.columnIndex="4" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
-                              <Label alignment="CENTER" prefHeight="19.0" prefWidth="31.0" text="X" textFill="#d62400" GridPane.columnIndex="5" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font size="15.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </GridPane>
-                        <Line endX="271.0" endY="-7.0" layoutX="71.0" layoutY="235.0" startX="-70.5" startY="-7.0" strokeWidth="0.7" />
                         <Label layoutX="14.0" layoutY="241.0" style="-fx-font-weight: bold;" text="TOTAL:">
                            <font>
                               <Font size="14.0" />
@@ -174,6 +101,23 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
+                        <ScrollPane prefHeight="225.0" prefWidth="359.0">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="287.0" prefWidth="357.0">
+                                 <children>
+                                    <TableView fx:id="produtosAddCarrinhoTV" layoutX="1.0" prefHeight="216.0" prefWidth="359.0">
+                                      <columns>
+                                        <TableColumn prefWidth="48.0" text="ID" />
+                                        <TableColumn prefWidth="91.0" text="Produto" />
+                                          <TableColumn prefWidth="49.0" text="QTD" />
+                                          <TableColumn minWidth="0.0" prefWidth="77.0" text="Preço" />
+                                          <TableColumn prefWidth="82.0" text="Subtotal" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </ScrollPane>
                      </children></AnchorPane>
                </children>
             </AnchorPane>
