--- a/src/Views/MenuDeProdutosVendedor.fxml
+++ b/src/Views/MenuDeProdutosVendedor.fxml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MenuDeProdutosVendedorController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MenuDeProdutosVendedorController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <MenuBar layoutX="425.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+            <MenuBar layoutX="423.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                <menus>
                   <Menu mnemonicParsing="false" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Carrinho" />
                   <Menu mnemonicParsing="false" style="-fx-text-fill: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Usuario" />
@@ -41,17 +34,17 @@
                <children>
                   <AnchorPane cacheShape="false" focusTraversable="true" layoutX="50.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgb(173, 188, 242, 1); -fx-background-radius: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                      <children>
-                        <TextField layoutX="72.0" layoutY="26.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <Label layoutX="45.0" layoutY="30.0" text="ID:" />
-                        <Label layoutX="23.0" layoutY="72.0" text="Nome:" />
-                        <Label layoutX="23.0" layoutY="116.0" text="Preço:" />
+                        <TextField fx:id="idEnter" editable="false" layoutX="72.0" layoutY="27.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <Label layoutX="45.0" layoutY="31.0" text="ID:" />
+                        <Label layoutX="23.0" layoutY="74.0" text="Nome:" />
+                        <Label layoutX="23.0" layoutY="119.0" text="Preço:" />
                         <Label layoutX="8.0" layoutY="206.0" text="Estoque:" />
-                        <Label layoutX="31.0" layoutY="162.0" text="Tipo:" />
-                        <Button layoutX="40.0" layoutY="260.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="180.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1);" text="Adicionar ao Carrinho" textFill="WHITE" />
-                        <TextField layoutX="72.0" layoutY="68.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <TextField layoutX="72.0" layoutY="157.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <TextField layoutX="72.0" layoutY="111.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <TextField layoutX="72.0" layoutY="203.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <Label layoutX="31.0" layoutY="164.0" text="Tipo:" />
+                        <Button fx:id="adicionarCarrinhoButton" layoutX="40.0" layoutY="284.0" mnemonicParsing="false" onAction="#adicionar_carrinho_onAction" prefHeight="30.0" prefWidth="180.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1);" text="Adicionar ao Carrinho" textFill="WHITE" />
+                        <TextField fx:id="nomeEnter" editable="false" layoutX="72.0" layoutY="70.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="tipoEnter" editable="false" layoutX="72.0" layoutY="159.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="precoEnter" editable="false" layoutX="72.0" layoutY="114.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="estoqueEnter" editable="false" layoutX="72.0" layoutY="203.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                      </children>
                   </AnchorPane>
                </children>
@@ -60,17 +53,14 @@
                <children>
                   <AnchorPane layoutX="50.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgb(173, 188, 242, 1); -fx-background-radius: 40;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                      <children>
-                        <ImageView fitHeight="112.0" fitWidth="181.0" layoutX="84.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image.jpg" />
-                           </image>
-                        </ImageView>
-                        <TextField layoutX="30.0" layoutY="200.0" prefHeight="96.0" prefWidth="200.0" style="-fx-background-radius: 10;" />
-                        <Label layoutX="32.0" layoutY="177.0" style="-fx-font-weight: bold;" text="Descrição:" textFill="#1e54e1" />
+                        <TextField fx:id="descricaoEnter" editable="false" layoutX="30.0" layoutY="200.0" prefHeight="96.0" prefWidth="200.0" style="-fx-background-radius: 10;" />
+                        <Label fx:id="descricaoEnter" layoutX="32.0" layoutY="177.0" style="-fx-font-weight: bold;" text="Descrição:" textFill="#1e54e1" />
+                        <ImageView fx:id="imagemProduto" fitHeight="129.0" fitWidth="200.0" layoutX="30.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </AnchorPane>
                </children>
             </AnchorPane>
+            <Button fx:id="cancelarButton" layoutX="60.0" layoutY="297.0" mnemonicParsing="false" onAction="#cancelar_onAction" prefHeight="30.0" prefWidth="180.0" style="-fx-background-radius: 10; -fx-background-color: rgba(244, 93, 83, 1);" text="Cancelar" textFill="WHITE" />
          </children>
       </AnchorPane>
    </children>
