--- a/src/Views/BuscarVendedoresAdmin.fxml
+++ b/src/Views/BuscarVendedoresAdmin.fxml
@@ -25,10 +25,10 @@
                   <MenuBar layoutX="423.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                      <menus>
                         <Menu fx:id="menuCarrinho" mnemonicParsing="false" onAction="#menuCarrinhoOnAction" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Carrinho" />
-                        <Menu mnemonicParsing="false" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Usuario">
+                        <Menu fx:id="menuUSer" mnemonicParsing="false" onAction="#menu_user" style="-fx-text-fill: rgba(11, 63, 194, 1); -fx-font-weight: bold;" text="Usuario">
                            <items>
-                              <MenuItem fx:id="menuUserPerfil" mnemonicParsing="false" onAction="#menuUserPerfilOnAction" text="Perfil" />
-                              <MenuItem fx:id="menuUserSair" mnemonicParsing="false" onAction="#menuUserSairOnAction" text="Sair" />
+                              <MenuItem fx:id="menuUserPerfil" mnemonicParsing="false" onAction="#menu_user_perfil_onAction" text="Perfil" />
+                              <MenuItem fx:id="menuUserSair" mnemonicParsing="false" onAction="#menu_user_sair_onAction" text="Sair" />
                            </items></Menu>
                      </menus>
                   </MenuBar>
