--- a/src/Views/MenuAdministrador.fxml
+++ b/src/Views/MenuAdministrador.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -67,6 +69,36 @@
                               <Font size="11.0" />
                            </font>
                         </Button>
+                        <ImageView fitHeight="108.0" fitWidth="155.0" layoutX="44.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="108.0" fitWidth="155.0" layoutX="224.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="108.0" fitWidth="155.0" layoutX="404.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="108.0" fitWidth="155.0" layoutX="44.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="108.0" fitWidth="155.0" layoutX="224.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="108.0" fitWidth="155.0" layoutX="404.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image.jpg" />
+                           </image>
+                        </ImageView>
                         <Button fx:id="pesquisar_admin" layoutX="490.0" layoutY="96.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Pesquisar" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
@@ -78,7 +110,7 @@
                            </toggleGroup>
                         </RadioButton>
                         <RadioButton fx:id="rb_nome" layoutX="122.0" layoutY="72.0" mnemonicParsing="false" text="Nome" toggleGroup="$selecao_pesquisa" />
-                        <Label fx:id="label_aviso" layoutX="195.0" layoutY="72.0" prefHeight="17.0" prefWidth="358.0" textFill="RED" />
+                        <Label fx:id="label_aviso" layoutX="195.0" layoutY="72.0" prefHeight="17.0" prefWidth="155.0" />
                      </children>
                   </AnchorPane>
                </children>
