--- a/src/Views/Pagamento.fxml
+++ b/src/Views/Pagamento.fxml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PagamentoController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PagamentoController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(14, 78, 167, 1);">
          <children>
             <AnchorPane layoutX="189.0" layoutY="61.0" prefHeight="279.0" prefWidth="223.0" style="-fx-background-color: rgba(255, 255, 255, 1); -fx-background-radius: 40;">
                <children>
-                  <Button layoutX="46.0" layoutY="175.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="131.0" style="-fx-background-color: rgba(58, 207, 126, 1); -fx-background-radius: 20;" text="Confirmar" textFill="WHITE" AnchorPane.bottomAnchor="70.0" />
-                  <RadioButton layoutX="71.0" layoutY="63.0" mnemonicParsing="false" selected="true" text="Crédito">
+                  <Button fx:id="confirmarButton" layoutX="46.0" layoutY="175.0" mnemonicParsing="false" onAction="#confirmar_onAction" prefHeight="34.0" prefWidth="131.0" style="-fx-background-color: rgba(58, 207, 126, 1); -fx-background-radius: 20;" text="Confirmar" textFill="WHITE" AnchorPane.bottomAnchor="70.0" />
+                  <RadioButton fx:id="creditoRadioButton" layoutX="71.0" layoutY="63.0" mnemonicParsing="false" onAction="#credito_onAction" selected="true" text="Crédito">
                      <toggleGroup>
                         <ToggleGroup fx:id="grupo" />
                      </toggleGroup></RadioButton>
-                  <RadioButton layoutX="71.0" layoutY="98.0" mnemonicParsing="false" text="Débito" toggleGroup="$grupo" />
-                  <RadioButton layoutX="71.0" layoutY="133.0" mnemonicParsing="false" text="À Vista" toggleGroup="$grupo" />
+                  <RadioButton fx:id="debitoRadioButton" layoutX="71.0" layoutY="98.0" mnemonicParsing="false" onAction="#debito_onAction" text="Débito" toggleGroup="$grupo" />
+                  <RadioButton fx:id="aVistaRadioButton" layoutX="71.0" layoutY="133.0" mnemonicParsing="false" onAction="#a_vista_onAction" text="À Vista" toggleGroup="$grupo" />
                   <Label contentDisplay="CENTER" layoutX="32.0" layoutY="17.0" prefHeight="35.0" prefWidth="159.0" style="-fx-font-weight: bold;" text="TIPO DE PAGAMENTO" textAlignment="CENTER" textFill="#0b3fc2">
                      <opaqueInsets>
                         <Insets bottom="10.0" />
                      </opaqueInsets>
                   </Label>
-                  <Button layoutX="46.0" layoutY="221.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="131.0" style="-fx-background-color: rgba(244, 93, 83, 1); -fx-background-radius: 20;" text="Cancelar" textFill="WHITE" />
+                  <Button fx:id="cancelarButton" layoutX="46.0" layoutY="221.0" mnemonicParsing="false" onAction="#cancelar_onAction" prefHeight="34.0" prefWidth="131.0" style="-fx-background-color: rgba(244, 93, 83, 1); -fx-background-radius: 20;" text="Cancelar" textFill="WHITE" />
                </children>
             </AnchorPane>
          </children>
