--- a/src/Views/Perfil.fxml
+++ b/src/Views/Perfil.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -31,10 +30,10 @@
                         <Label layoutX="10.0" layoutY="115.0" text="Vendas:" />
                         <Label layoutX="13.0" layoutY="208.0" text="Senha:" />
                         <Label layoutX="22.0" layoutY="162.0" text="Email:" />
-                        <Button fx:id="perfil_atualizar" layoutX="45.0" layoutY="261.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="170.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1);" text="Atualizar Dados" textFill="WHITE" />
+                        <Button fx:id="atualizarDadosButton" layoutX="45.0" layoutY="261.0" mnemonicParsing="false" onAction="#atualizar_dados_onAction" prefHeight="30.0" prefWidth="170.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1);" text="Atualizar Dados" textFill="WHITE" />
                         <TextField fx:id="perfil_nome" layoutX="72.0" layoutY="68.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <TextField fx:id="perfil_email" layoutX="72.0" layoutY="157.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <TextField layoutX="72.0" layoutY="111.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="vendasText" layoutX="72.0" layoutY="111.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <TextField fx:id="perfil_senha" layoutX="72.0" layoutY="203.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                      </children>
                   </AnchorPane>
@@ -44,11 +43,7 @@
                <children>
                   <AnchorPane layoutX="50.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgb(173, 188, 242, 1); -fx-background-radius: 40;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                      <children>
-                        <ImageView fitHeight="112.0" fitWidth="181.0" layoutX="46.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fitHeight="112.0" fitWidth="181.0" layoutX="46.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true" />
                         <TextField fx:id="perfil_campos_adicionais" layoutX="30.0" layoutY="200.0" prefHeight="96.0" prefWidth="200.0" style="-fx-background-radius: 10;" />
                         <Label layoutX="32.0" layoutY="177.0" style="-fx-font-weight: bold;" text="Campos Adicionais:" textFill="#1e54e1" />
                      </children>
